--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "lucide-react": "^0.563.0",
     "react": "^19.2.4",
     "@google/genai": "^1.38.0",
-    "react-dom": "^19.2.4"
+    "react-dom": "^19.2.4",
+    "pdfjs-dist": "^4.0.379",
+    "mammoth": "^1.6.0"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
